# Gesture_Processing

./: Arduino_Code.ino  CMakeLists.txt  README.md
source/: main.cpp  mpu6050.cpp
